going to production

--- a/djequis/templates/foobar/form.html
+++ b/djequis/templates/foobar/form.html
@@ -38,6 +38,6 @@
     </form>
 </div>
 <div class="column2 large-4 medium-6 small-12">
-    {# include "foobar/help_text.html" #}
+    {% include "foobar/help_text.html" %}
 </div>
 {% endblock %}
