removed modal from update links

--- a/djequis/templates/foobar/archives.html
+++ b/djequis/templates/foobar/archives.html
@@ -11,7 +11,7 @@
         {{d.created_by.first_name}}
         {% if user.is_staff %}
           &nbsp;
-          <a class="jqmodal" title="edit this note"
+          <a title="edit this foobar"
             href="{% url 'foobar_update_form' d.id %}">
             <i class="fa fa-pencil"></i>
           </a>
