--- a/djequis/templates/foobar/detail_data.inc.html
+++ b/djequis/templates/foobar/detail_data.inc.html
@@ -9,7 +9,7 @@
         {{ data.title }}
         {% if user.is_staff %}
           &nbsp;
-          <a class="jqmodal" title="edit this note"
+          <a title="edit this foobar"
             href="{% url 'foobar_update_form' data.id %}">
             <i class="fa fa-pencil"></i>
           </a>
