updates to UI and view for wisact284

--- a/djequis/templates/base.html
+++ b/djequis/templates/base.html
@@ -48,7 +48,7 @@ $(function() {
 {% block body_tag %}{% endblock %}
 {% block navigation %}
 <nav class="navbar navbar-expand-sm bg-boot fixed-top navbar-dark" id="mainNav">
-  <a href="{% url 'home' %}" class="mr-sm-3 mr-lg-3"><i class="fa fa-home fa-2x green"></i></a>
+  <a href="{# url 'home' #}" class="mr-sm-3 mr-lg-3"><i class="fa fa-home fa-2x green"></i></a>
     <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
