modified html code to add all of the fields as will as header

--- a/djequis/templates/core/financialaid/wisact284.html
+++ b/djequis/templates/core/financialaid/wisact284.html
@@ -26,43 +26,128 @@
     <table class="table table-bordered table-hover" width="100%" cellspacing="0" id="data-table">
     <thead>
       <tr>
-        <th>#</th>
-        <th>OpeID</th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+          <th>School OPEID</th>
+          <th>Academic Year</th>
+          <th>Student SSN</th>
+          <th>Student First Name</th>
+          <th>Student Last Name</th>
+          <th>School Student ID</th>
+          <th>Student Address Line 1</th>
+          <th>Student Address Line 2</th>
+          <th>Student Address Line 3</th>
+          <th>Student City</th>
+          <th>Student State</th>
+          <th>Student Zip</th>
+          <th>Student Country</th>
+          <th>Student Email Address</th>
+          <th>Private Loan Name 1</th>
+          <th>Private Loan Amount 1</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 1</th>
+          <th>Private Loan Name 2</th>
+          <th>Private Loan Amount 2</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 2</th>
+          <th>Private Loan Name 3</th>
+          <th>Private Loan Amount 3</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 3</th>
+          <th>Private Loan Name 4</th>
+          <th>Private Loan Amount 4</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 4</th>
+          <th>Private Loan Name 5</th>
+          <th>Private Loan Amount 5</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 5</th>
+          <th>Private Loan Name 6</th>
+          <th>Private Loan Amount 6</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 6</th>
+          <th>Institutional Loan Name 1</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 2</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 3</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 4</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 5</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 6</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 1</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 2</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 3</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 4</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 5</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 6</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Tuition</th>
+          <th>Tuition Fees</th>
+          <th>Room & Board</th>
+          <th>Books & Supplies</th>
+          <th>Transportation</th>
+          <th>Other Education Costs</th>
+          <th>Personal Education Costs</th>
+          <th>Loan Fees</th>
+          <th>Institutional Grants</th>
+          <th>Institutional Scholarship</th>
+          <th>Federal Grants</th>
+          <th>State Grants</th>
+          <th>Other Scholarships</th>
       </tr>
     </thead>
     <tbody>
     {% for o in objects %}
       <tr>
-        <td>{{forloop.counter}}</td>
         <td>{{o.0}}</td>
         <td>{{o.1}}</td>
         <td>{{o.2}}</td>
@@ -93,41 +178,215 @@
         <td>{{o.27}}</td>
         <td>{{o.28}}</td>
         <td>{{o.29}}</td>
+        <td>{{o.30}}</td>
+        <td>{{o.31}}</td>
+        <td>{{o.32}}</td>
+        <td>{{o.33}}</td>
+        <td>{{o.34}}</td>
+        <td>{{o.35}}</td>
+        <td>{{o.36}}</td>
+        <td>{{o.37}}</td>
+        <td>{{o.38}}</td>
+        <td>{{o.39}}</td>
+        <td>{{o.40}}</td>
+        <td>{{o.41}}</td>
+        <td>{{o.42}}</td>
+        <td>{{o.43}}</td>
+        <td>{{o.44}}</td>
+        <td>{{o.45}}</td>
+        <td>{{o.46}}</td>
+        <td>{{o.47}}</td>
+        <td>{{o.48}}</td>
+        <td>{{o.49}}</td>
+        <td>{{o.50}}</td>
+        <td>{{o.51}}</td>
+        <td>{{o.52}}</td>
+        <td>{{o.53}}</td>
+        <td>{{o.54}}</td>
+        <td>{{o.55}}</td>
+        <td>{{o.56}}</td>
+        <td>{{o.57}}</td>
+        <td>{{o.58}}</td>
+        <td>{{o.59}}</td>
+        <td>{{o.60}}</td>
+        <td>{{o.61}}</td>
+        <td>{{o.62}}</td>
+        <td>{{o.63}}</td>
+        <td>{{o.64}}</td>
+        <td>{{o.65}}</td>
+        <td>{{o.66}}</td>
+        <td>{{o.67}}</td>
+        <td>{{o.68}}</td>
+        <td>{{o.69}}</td>
+        <td>{{o.70}}</td>
+        <td>{{o.71}}</td>
+        <td>{{o.72}}</td>
+        <td>{{o.73}}</td>
+        <td>{{o.74}}</td>
+        <td>{{o.75}}</td>
+        <td>{{o.76}}</td>
+        <td>{{o.77}}</td>
+        <td>{{o.78}}</td>
+        <td>{{o.79}}</td>
+        <td>{{o.80}}</td>
+        <td>{{o.81}}</td>
+        <td>{{o.82}}</td>
+        <td>{{o.83}}</td>
+        <td>{{o.84}}</td>
+        <td>{{o.85}}</td>
+        <td>{{o.86}}</td>
+        <td>{{o.87}}</td>
+        <td>{{o.88}}</td>
+        <td>{{o.89}}</td>
+        <td>{{o.90}}</td>
+        <td>{{o.91}}</td>
+        <td>{{o.92}}</td>
+        <td>{{o.93}}</td>
+        <td>{{o.94}}</td>
+        <td>{{o.95}}</td>
+        <td>{{o.96}}</td>
+        <td>{{o.97}}</td>
+        <td>{{o.98}}</td>
+        <td>{{o.99}}</td>
+        <td>{{o.100}}</td>
+        <td>{{o.101}}</td>
+        <td>{{o.102}}</td>
+        <td>{{o.103}}</td>
+        <td>{{o.104}}</td>
+        <td>{{o.105}}</td>
+        <td>{{o.106}}</td>
+        <td>{{o.107}}</td>
+        <td>{{o.108}}</td>
+        <td>{{o.109}}</td>
+        <td>{{o.110}}</td>
+        <td>{{o.111}}</td>
+        <td>{{o.112}}</td>
+        <td>{{o.113}}</td>
+        <td>{{o.114}}</td>
+        <td>{{o.115}}</td>
+        <td>{{o.116}}</td>
       </tr>
     {% endfor %}
     </tbody>
       <tfoot>
-        <th>#</th>
-        <th>OpeID</th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+          <th>#</th>
+          <th>School OPEID</th>
+          <th>Academic Year</th>
+          <th>Student SSN</th>
+          <th>Student First Name</th>
+          <th>Student Last Name</th>
+          <th>School Student ID</th>
+          <th>Student Address Line 1</th>
+          <th>Student Address Line 2</th>
+          <th>Student Address Line 3</th>
+          <th>Student City</th>
+          <th>Student State</th>
+          <th>Student Zip</th>
+          <th>Student Country</th>
+          <th>Student Email Address</th>
+          <th>Private Loan Name 1</th>
+          <th>Private Loan Amount 1</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 1</th>
+          <th>Private Loan Name 2</th>
+          <th>Private Loan Amount 2</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 2</th>
+          <th>Private Loan Name 3</th>
+          <th>Private Loan Amount 3</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 3</th>
+          <th>Private Loan Name 4</th>
+          <th>Private Loan Amount 4</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 4</th>
+          <th>Private Loan Name 5</th>
+          <th>Private Loan Amount 5</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 5</th>
+          <th>Private Loan Name 6</th>
+          <th>Private Loan Amount 6</th>
+          <th>Repayment Length</th>
+          <th>Private Loan Interest Rate</th>
+          <th>Loan Date 6</th>
+          <th>Institutional Loan Name 1</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 2</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 3</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 4</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 5</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Institutional Loan Name 6</th>
+          <th>Institutional Loan Amount</th>
+          <th>Institutional Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 1</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 2</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 3</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 4</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 5</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>State Loan Name 6</th>
+          <th>State Loan Amount</th>
+          <th>State Loan Interest Rate</th>
+          <th>Repayment Length</th>
+          <th>Loan Date</th>
+          <th>Tuition</th>
+          <th>Tuition Fees</th>
+          <th>Room & Board</th>
+          <th>Books & Supplies</th>
+          <th>Transportation</th>
+          <th>Other Education Costs</th>
+          <th>Personal Education Costs</th>
+          <th>Loan Fees</th>
+          <th>Institutional Grants</th>
+          <th>Institutional Scholarship</th>
+          <th>Federal Grants</th>
+          <th>State Grants</th>
+          <th>Other Scholarships</th>
       </tfoot>
     </table>
     </div>
