--- a/djequis/templates/core/financialaid/home.html
+++ b/djequis/templates/core/financialaid/home.html
@@ -6,6 +6,25 @@
     Business Services &mdash;
     Carthage College
 {% endblock %}
+{% block extra_javascript %}
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.flash.min.js"></script>
+<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.print.min.js"></script>
+<script>
+$(document).ready(function() {
+  var table = $('#data-table').DataTable({
+    'lengthMenu': [
+      [25, 50, 100, 250, 500, 1000, 2000, -1],
+      [25, 50, 100, 250, 500, 1000, 2000, "All"]
+    ],
+    dom: 'lfrBtip',
+    buttons: ['csv']
+  });
+});
+</script>
+{% endblock %}
 {% block content %}
 <div class="card mb-3">
   <div class="card-header">
