improvements to the wisact284 UI and UX

--- a/djequis/templates/base_datatables.html
+++ b/djequis/templates/base_datatables.html
@@ -38,6 +38,11 @@ $(document).ready(function() {
       'csv', 'excel'
     ]
   });
+  // disable submit button after user clicks it
+  $('form#profile').bind('submit', function (e) {
+    $('form#profile input[type=submit]').prop('disabled', true);
+    return true;
+  });
 });
 </script>
 {% endblock %}
