--- a/djequis/templates/includes/form.inc.html
+++ b/djequis/templates/includes/form.inc.html
@@ -1,4 +1,4 @@
-<div class="forms-container large-8 medium-10 small-12">
+<div class="forms-container large-8 medium-10 small-12" id="forms-container">
     {% include "includes/errors_text.html" %}
     <form method="post" action="." class="form" id="profile">
         {% csrf_token %}
