--- a/djequis/templates/core/financialaid/wisact284.html
+++ b/djequis/templates/core/financialaid/wisact284.html
@@ -1,6 +1,6 @@
 {% extends "base_datatables.html" %}
 {% block title %}
-    Wisconsin Act 284&mdash;Financial Aid &mdash;Carthage College
+    Wisconsin Act 284&mdash;Financial Aid&mdash;Carthage College
 {% endblock %}
 {% block extra_javascript %}
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
@@ -8,15 +8,48 @@
 <script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.1/js/buttons.print.min.js"></script>
+<script src="//www.carthage.edu/static/vendor/js/spin.min.js" type="text/javascript"></script>
 <script>
 $(document).ready(function() {
+  /* spinner */
+  var opts = {
+      lines: 13, // The number of lines to draw
+      length: 20, // The length of each line
+      width: 10, // The line thickness
+      radius: 30, // The radius of the inner circle
+      corners: 1, // Corner roundness (0..1)
+      rotate: 0, // The rotation offset
+      direction: 1, // 1: clockwise, -1: counterclockwise
+      color: '#000', // #rgb or #rrggbb or array of colors
+      speed: 1, // Rounds per second
+      trail: 60, // Afterglow percentage
+      shadow: false, // Whether to render a shadow
+      hwaccel: false, // Whether to use hardware acceleration
+      className: 'search-results', // The CSS class to assign to spinner
+      zIndex: 2e9, // The z-index (defaults to 2000000000)
+      top: '50px', // Top position relative to parent in px
+      left: 'auto' // Left position relative to parent in px
+  };
+  var target = document.getElementById("forms-container");
+  var spinner = new Spinner(opts).spin(target);
+  spinner.stop(target);
+
   var table = $('#data-table').DataTable({
     'lengthMenu': [
       [25, 50, 100, 250, 500, 1000, 2000, -1],
       [25, 50, 100, 250, 500, 1000, 2000, "All"]
     ],
     dom: 'lfrBtip',
-    buttons: ['csv']
+    buttons: [{
+        extend: 'csv',
+        header: false
+    }]
+  });
+  // disable submit button after user clicks it
+  $('form#profile').bind('submit', function (e) {
+    spinner.spin(target);
+    $('form#profile input[type=submit]').prop('disabled', true);
+    return true;
   });
 });
 </script>
