--- a/djequis/templates/core/financialaid/wisact284.html
+++ b/djequis/templates/core/financialaid/wisact284.html
@@ -25,6 +25,7 @@ $(document).ready(function() {
   // disable submit button after user clicks it
   $('form#profile').bind('submit', function (e) {
     $('form#profile input[type=submit]').prop('disabled', true);
+    $('#one-moment').modal();
     return true;
   });
 });
@@ -44,380 +45,24 @@ $(document).ready(function() {
 {% endblock %}
 {% block content %}
 {% include "includes/form.inc.html" %}
-{% if objects %}
-<div class="card mb-3">
-  <div class="card-header">
-    <i class="fa fa-table"></i> Data
-  </div>
-  <div class="card-body" style="margin-bottom:20px">
-    <div class="table-responsive">
-    <table class="table table-bordered table-hover" width="100%" cellspacing="0" id="data-table">
-    <thead>
-      <tr>
-          <th>School OPEID</th>
-          <th>Academic Year</th>
-          <th>Student SSN</th>
-          <th>Student First Name</th>
-          <th>Student Last Name</th>
-          <th>School Student ID</th>
-          <th>Student Address Line 1</th>
-          <th>Student Address Line 2</th>
-          <th>Student Address Line 3</th>
-          <th>Student City</th>
-          <th>Student State</th>
-          <th>Student Zip</th>
-          <th>Student Country</th>
-          <th>Student Email Address</th>
-          <th>Private Loan Name 1</th>
-          <th>Private Loan Amount 1</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 1</th>
-          <th>Private Loan Name 2</th>
-          <th>Private Loan Amount 2</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 2</th>
-          <th>Private Loan Name 3</th>
-          <th>Private Loan Amount 3</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 3</th>
-          <th>Private Loan Name 4</th>
-          <th>Private Loan Amount 4</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 4</th>
-          <th>Private Loan Name 5</th>
-          <th>Private Loan Amount 5</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 5</th>
-          <th>Private Loan Name 6</th>
-          <th>Private Loan Amount 6</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 6</th>
-          <th>Institutional Loan Name 1</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 2</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 3</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 4</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 5</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 6</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 1</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 2</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 3</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 4</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 5</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 6</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Tuition</th>
-          <th>Tuition Fees</th>
-          <th>Room & Board</th>
-          <th>Books & Supplies</th>
-          <th>Transportation</th>
-          <th>Other Education Costs</th>
-          <th>Personal Education Costs</th>
-          <th>Loan Fees</th>
-          <th>Institutional Grants</th>
-          <th>Institutional Scholarship</th>
-          <th>Federal Grants</th>
-          <th>State Grants</th>
-          <th>Other Scholarships</th>
-      </tr>
-    </thead>
-    <tbody>
-    {% for o in objects %}
-      <tr>
-        <td>{{o.0}}</td>
-        <td>{{o.1}}</td>
-        <td>{{o.2}}</td>
-        <td>{{o.3}}</td>
-        <td>{{o.4}}</td>
-        <td>{{o.5}}</td>
-        <td>{{o.6}}</td>
-        <td>{{o.7}}</td>
-        <td>{{o.8}}</td>
-        <td>{{o.9}}</td>
-        <td>{{o.10}}</td>
-        <td>{{o.11}}</td>
-        <td>{{o.12}}</td>
-        <td>{{o.13}}</td>
-        <td>{{o.14}}</td>
-        <td>{{o.15}}</td>
-        <td>{{o.16}}</td>
-        <td>{{o.17}}</td>
-        <td>{{o.18}}</td>
-        <td>{{o.19}}</td>
-        <td>{{o.20}}</td>
-        <td>{{o.21}}</td>
-        <td>{{o.22}}</td>
-        <td>{{o.23}}</td>
-        <td>{{o.24}}</td>
-        <td>{{o.25}}</td>
-        <td>{{o.26}}</td>
-        <td>{{o.27}}</td>
-        <td>{{o.28}}</td>
-        <td>{{o.29}}</td>
-        <td>{{o.30}}</td>
-        <td>{{o.31}}</td>
-        <td>{{o.32}}</td>
-        <td>{{o.33}}</td>
-        <td>{{o.34}}</td>
-        <td>{{o.35}}</td>
-        <td>{{o.36}}</td>
-        <td>{{o.37}}</td>
-        <td>{{o.38}}</td>
-        <td>{{o.39}}</td>
-        <td>{{o.40}}</td>
-        <td>{{o.41}}</td>
-        <td>{{o.42}}</td>
-        <td>{{o.43}}</td>
-        <td>{{o.44}}</td>
-        <td>{{o.45}}</td>
-        <td>{{o.46}}</td>
-        <td>{{o.47}}</td>
-        <td>{{o.48}}</td>
-        <td>{{o.49}}</td>
-        <td>{{o.50}}</td>
-        <td>{{o.51}}</td>
-        <td>{{o.52}}</td>
-        <td>{{o.53}}</td>
-        <td>{{o.54}}</td>
-        <td>{{o.55}}</td>
-        <td>{{o.56}}</td>
-        <td>{{o.57}}</td>
-        <td>{{o.58}}</td>
-        <td>{{o.59}}</td>
-        <td>{{o.60}}</td>
-        <td>{{o.61}}</td>
-        <td>{{o.62}}</td>
-        <td>{{o.63}}</td>
-        <td>{{o.64}}</td>
-        <td>{{o.65}}</td>
-        <td>{{o.66}}</td>
-        <td>{{o.67}}</td>
-        <td>{{o.68}}</td>
-        <td>{{o.69}}</td>
-        <td>{{o.70}}</td>
-        <td>{{o.71}}</td>
-        <td>{{o.72}}</td>
-        <td>{{o.73}}</td>
-        <td>{{o.74}}</td>
-        <td>{{o.75}}</td>
-        <td>{{o.76}}</td>
-        <td>{{o.77}}</td>
-        <td>{{o.78}}</td>
-        <td>{{o.79}}</td>
-        <td>{{o.80}}</td>
-        <td>{{o.81}}</td>
-        <td>{{o.82}}</td>
-        <td>{{o.83}}</td>
-        <td>{{o.84}}</td>
-        <td>{{o.85}}</td>
-        <td>{{o.86}}</td>
-        <td>{{o.87}}</td>
-        <td>{{o.88}}</td>
-        <td>{{o.89}}</td>
-        <td>{{o.90}}</td>
-        <td>{{o.91}}</td>
-        <td>{{o.92}}</td>
-        <td>{{o.93}}</td>
-        <td>{{o.94}}</td>
-        <td>{{o.95}}</td>
-        <td>{{o.96}}</td>
-        <td>{{o.97}}</td>
-        <td>{{o.98}}</td>
-        <td>{{o.99}}</td>
-        <td>{{o.100}}</td>
-        <td>{{o.101}}</td>
-        <td>{{o.102}}</td>
-        <td>{{o.103}}</td>
-        <td>{{o.104}}</td>
-        <td>{{o.105}}</td>
-        <td>{{o.106}}</td>
-        <td>{{o.107}}</td>
-        <td>{{o.108}}</td>
-        <td>{{o.109}}</td>
-        <td>{{o.110}}</td>
-        <td>{{o.111}}</td>
-        <td>{{o.112}}</td>
-        <td>{{o.113}}</td>
-        <td>{{o.114}}</td>
-        <td>{{o.115}}</td>
-        <td>{{o.116}}</td>
-      </tr>
-    {% endfor %}
-    </tbody>
-      <tfoot>
-          <th>School OPEID</th>
-          <th>Academic Year</th>
-          <th>Student SSN</th>
-          <th>Student First Name</th>
-          <th>Student Last Name</th>
-          <th>School Student ID</th>
-          <th>Student Address Line 1</th>
-          <th>Student Address Line 2</th>
-          <th>Student Address Line 3</th>
-          <th>Student City</th>
-          <th>Student State</th>
-          <th>Student Zip</th>
-          <th>Student Country</th>
-          <th>Student Email Address</th>
-          <th>Private Loan Name 1</th>
-          <th>Private Loan Amount 1</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 1</th>
-          <th>Private Loan Name 2</th>
-          <th>Private Loan Amount 2</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 2</th>
-          <th>Private Loan Name 3</th>
-          <th>Private Loan Amount 3</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 3</th>
-          <th>Private Loan Name 4</th>
-          <th>Private Loan Amount 4</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 4</th>
-          <th>Private Loan Name 5</th>
-          <th>Private Loan Amount 5</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 5</th>
-          <th>Private Loan Name 6</th>
-          <th>Private Loan Amount 6</th>
-          <th>Repayment Length</th>
-          <th>Private Loan Interest Rate</th>
-          <th>Loan Date 6</th>
-          <th>Institutional Loan Name 1</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 2</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 3</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 4</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 5</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Institutional Loan Name 6</th>
-          <th>Institutional Loan Amount</th>
-          <th>Institutional Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 1</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 2</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 3</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 4</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 5</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>State Loan Name 6</th>
-          <th>State Loan Amount</th>
-          <th>State Loan Interest Rate</th>
-          <th>Repayment Length</th>
-          <th>Loan Date</th>
-          <th>Tuition</th>
-          <th>Tuition Fees</th>
-          <th>Room & Board</th>
-          <th>Books & Supplies</th>
-          <th>Transportation</th>
-          <th>Other Education Costs</th>
-          <th>Personal Education Costs</th>
-          <th>Loan Fees</th>
-          <th>Institutional Grants</th>
-          <th>Institutional Scholarship</th>
-          <th>Federal Grants</th>
-          <th>State Grants</th>
-          <th>Other Scholarships</th>
-      </tfoot>
-    </table>
+<!-- Modal -->
+<div class="modal fade" id="one-moment" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Working on it</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        It might take a few seconds to generate the CSV file.<br>
+        No need to hit the submit button again.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
     </div>
   </div>
 </div>
-{% endif %}
 {% endblock %}
