--- a/djequis/templates/core/financialaid/wisact284.html
+++ b/djequis/templates/core/financialaid/wisact284.html
@@ -24,8 +24,10 @@ $(document).ready(function() {
   });
   // disable submit button after user clicks it
   $('form#profile').bind('submit', function (e) {
-    $('form#profile input[type=submit]').prop('disabled', true);
-    $('#one-moment').modal();
+    //$('form#profile input[type=submit]').prop('disabled', true);
+    $('#one-moment').modal({
+      keyboard: false
+    });
     return true;
   });
 });
