--- a/djequis/templates/core/admissions/sms/form.html
+++ b/djequis/templates/core/admissions/sms/form.html
@@ -1,27 +1,33 @@
 {% extends "base.html" %}
 {% block title %}
-    Send SMS &mdash; Twilio &mdash; Carthage College
+    Send SMS &mdash; Admissions &mdash; Carthage College
 {% endblock %}
+{% block extra_javascript %}
+<script src="https://www.carthage.edu/static/vendor/cleave.js/cleave.min.js"></script>
+<script src="https://www.carthage.edu/static/vendor/cleave.js/addons/cleave-phone.us.js"></script>
+<script>
+var cleavePhone = new Cleave('#id_phone', {
+  phone: true,
+  phoneRegionCode: 'US'
+});
 
-{% block group_name %}
-    Admissions
+$(function() {
+  var maxLength = 140;
+  $('textarea').keyup(function() {
+    var length = $(this).val().length;
+    var length = maxLength-length;
+    $('#chars').text(length);
+
+    if($(this).val().length > maxLength){
+      $("#id_message").css('color','red');
+    }else{
+      $("#id_message").css('color','black');
+    }
+
+  });
+});
+</script>
 {% endblock %}
-
-{% block left_nav %}
-    {% include "core/admissions/twilio/left_nav.html" %}
-{% endblock %}
-
-{% block sidebar %}
-    {% include "core/admissions/side_bar.html" %}
-{% endblock %}
-
-{% block content_head %}
-    <h1 id="page_title">
-        Admissions/Twilio
-        <span id="secondary-dropdown"></span>
-    </h1>
-{% endblock %}
-
 {% block content %}
 <div class="forms-container large-8 medium-10 small-12">
     {% include "includes/required_text.html" %}
@@ -40,8 +46,5 @@
         </fieldset>
         {% include "form_submit.inc.html" %}
     </form>
-</div>
-<div class="column2 large-4 medium-6 small-12">
-    {% include "core/admissions/help_text.html" %}
 </div>
 {% endblock %}
