--- a/djequis/templates/core/trustcommerce/home.html
+++ b/djequis/templates/core/trustcommerce/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
    <title>TrustCommerce import tool</title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -15,14 +16,42 @@
 </head>
 <body>
 <h3>
-    This page is for building CSV files for ascii-posting
+    This page is for building CSV	 files for ascii-posting
     of credit card transactions into CX
 </h3>
+<!--
+<if not isDefined("FORM.method")>
+
+</if>
+<cfelseif FORM.method EQ "view_details">
+
+</if>
+
+<cfelseif FORM.method EQ "create_csv">
+</if>
+
+ <cfelseif FORM.method EQ "download_csv">
+ </if>
+
+ <cfelseif FORM.method EQ "update_table">
+ </if>
+
+-->
+
+<!-- "objects" is a python list from "views.py" assigned from the queries to tcpayflow and djforms     -->
+<!-- How does it know which object to process?
+In views.py, objects is associated to the queries PCE_TRANSACTIONS, and PSM_TRANSACTIONS
+which then populate tcpayflow_results, djforms_results
+Those are, I think, put together by the "chain" command, which is essentially a union
+So for the second step, I would have to add a new variable for objects referencing another query
+How I pass a variable to it is another qeustion....
+-->
 {% if objects|length > 0 %}
     <p>
         We have {{objects|length}} new credit card
         transaction{{objects|length|pluralize}}.
     </p>
+
     <table cellpadding="1" cellspacing="0" border="0">
       <tr class="zebra0">
         <th>Activity</th>
@@ -32,7 +61,7 @@
       {% for o in objects %}
         <tr class="{% cycle 'zebra1' 'zebra0' %}">
             <td>{{o.0}}</td>
-            <td align="right">#counters[activity]#</td>
+            <td align="right">{{ forloop.counter }}</td>
             <td>{{o.9}}</td>
             <td>
               <form name="get_activity_details" method="POST" action=".">
