minor changes during testing

--- a/djequis/templates/core/trustcommerce/home.html
+++ b/djequis/templates/core/trustcommerce/home.html
@@ -16,12 +16,11 @@
 </head>
 <body>
 <h3>
-    This page is for building CSV	 files for ascii-posting
+    This page is for building CSV files for Ascii-posting
     of credit card transactions into CX
 </h3>
 
-<!-- "objects" is a python list from "views.py" assigned from the queries to tcpayflow and djforms     -->
-<!-- How does it know which object to process?
+<!-- "objects" is a python list from "views.py" assigned from the queries to tcpayflow and djforms
 In views.py, objects is associated to the queries PCE_TRANSACTIONS, and PSM_TRANSACTIONS
 which then populate tcpayflow_results, djforms_results
 Those are, I think, put together by the "chain" command, which is essentially a union
