--- a/djequis/templates/core/trustcommerce/details.html
+++ b/djequis/templates/core/trustcommerce/details.html
@@ -20,8 +20,7 @@
     of credit card transactions into CX
 </h3>
 
-<!-- "objects" is a python list from "views.py" assigned from the queries to tcpayflow and djforms     -->
-<!-- How does it know which object to process?
+<!-- "objects" is a python list from "views.py" assigned from the queries to tcpayflow and djforms
 In views.py, objects is associated to the queries PCE_TRANSACTIONS, and PSM_TRANSACTIONS
 which then populate tcpayflow_results, djforms_results
 Those are, I think, put together by the "chain" command, which is essentially a union
@@ -35,45 +34,80 @@ How I pass a variable to it is another question....
     <p>
         We have {{objects|length}} new credit card
         transaction{{objects|length|pluralize}}.
+      Activity code  {{activity}}
     </p>
-    <p>
-       Activity ID =  {{ activity }}
-    </p>
-    <table cellpadding="1" cellspacing="0" border="0">
+
+
+<table cellpadding="1" cellspacing="0" border="1">
          <tr class="zebra0">
-              <th>Count</th>
-              <th>ID</th>
-              <th>Activity</th>
-              <th>Amt</th>
-              <!--<th>Date</th>-->
+
+              <th>Accept</t>
+              <th>Record</t>
+              <th>Date</t>
+              <th>Activity ID</t>
+              <th>Activity</t>
+              <th>PNREF</t>
+              <th>Amt</t>
               <th>Name</th>
-              <!--<th>Result</th>-->
-              <th>Ref</th>
-              <th>Code</th>
-              <th>Action</th>
+              <th>Comment1</th>
+              <th>StuID</th>
          </tr>
 
          {% for obj in objects %}
               <tr class="{% cycle 'zebra1' 'zebra0' %}">
+                   <td><input id="checkBox" name=CheckedVal type="checkbox" value={{obj.0}} checked="checked"></td>
                    <form name="get_activity_details" method="POST" action=".">
-                       <td align="right">{{ forloop.counter }}</td>
-                           <td>{{obj.0}}</td>
-                           <td>{{obj.1}}</td>
-                           <td>{{obj.2}}</td>
-                           <!--<td>{{obj.5}}</td>-->
-                           <td>{{obj.6}}</td>
-                           <!--<td>{{obj.7}}</td>-->
-                           <td>{{obj.8}}</td>
-                           <td>{{obj.9}}</td>
-                                <input name="activity" value="{{obj.0}}" type="hidden">
-                                <input name="datasource" value="{{obj.10}}" type="hidden">
-                                <input name="method" value="view_details" type="hidden">
-                                <input name="selWTCode" value="{{obj.9}}" type="hidden">
-                           <td><input name="submit" type="submit" value="View Details"></td>
-                       </td>
+                       <!--<td align="right">{{ forloop.counter }}</td>-->
+                       <td>{{obj.2}}</td>  <!--record ID-->
+                       <td>{{obj.6}}</td>  <!--date-->
+                       <td>{{obj.1}} </td> <!-- activity ID-->
+                       <td>{{obj.0}}</td>  <!--activity descr-->
+                       <td>{{obj.9}}</td>   <!--pn ref-->
+                       <td>{{obj.3}}</td>  <!--amt-->
+                       <td>{{obj.7}}</td>   <!--name-->
+                       <td>{{obj.4}}</td>  <!--Comment 1-->
+                       <td>{{obj.5}}</td>  <!--comment 2-->
+                       <td>{{obj.10}}</td>   <!--Webtrans code-->
+                       <td>{{obj.11}}</td>   <!--Data Source-->
+                       <!--<td>{{obj.8}}</td>   result-->
+                       <!--<td>{{obj.4}}</td>-->
+                       <!--<td>{{obj.9}}</td>-->
+                       <!--<td>{{obj.1}}</td>-->
+                       <!--<td>{{obj.7}}</td>-->
+
+                       <input name="activity" value="{{obj.1}}" type="hidden">
+                       <input name="datasource" value="{{obj.11}}" type="hidden">
+                       <input name="method" value="view_details" type="hidden">
+                       <input name="selWTCode" value="{{obj.10}}" type="hidden">
+                        </td>
                    </form>
               </tr>
          {% endfor %}
+
+    </table>
+    <br>
+    <table style="width:100%" border=0 width 200>
+        <td>Activity = {{activity}}</td>
+        <!--If enrichment -->
+        {% if activity == '1' %}
+        <tr><td>
+            Camp Status:
+            <input type="radio" name="precamp" id="yes" value="precamp" checked="checked"> Pre-Camp
+            <input type="radio" name="precamp" id="no" value="incamp" > After start of camp
+        </td></tr>
+        <!--If parking permit -->
+        {% elif activity == '2' %}
+        <tr><td>Enrichment: Enter Term:
+            <input type="text" name="term" required="yes" title="Term" >  </td></tr>
+        <!--If soccer camp -->
+        {% elif activity == '21' %}
+        <tr><td>Parking: Enter Term:
+            <input type="text" name="term" required="yes" title="Term" >  </td></tr>
+        {% endif %}
+        <tr><td><input name="submit" type="submit" value="Submit"></td></tr>
+
+        <!--should be url +  name of url construct, parameter; display text-->
+        <a href="{% url 'trustcommerce_home' %}">download</a>
 
     </table>
 
