--- a/djequis/templates/core/trustcommerce/details.html
+++ b/djequis/templates/core/trustcommerce/details.html
@@ -37,57 +37,44 @@ How I pass a variable to it is another question....
       Activity code  {{activity}}
     </p>
 
+    <form name="get_activity_details" method="POST" action=".">
+         <table cellpadding="1" border="1">
+             {% for obj in objects %}
+                  <tr class="{% cycle 'zebra1' 'zebra0' %}">
+                           <td><input id="checkBox" name=CheckedVal[] type="checkbox" value={{obj.2}} checked="checked"></td>
+                           <!--<td align="right">{{ forloop.counter }}</td>-->
+                           <td>{{obj.2}}</td>  <!--record ID-->
+                           <td>{{obj.6}}</td>  <!--date-->
+                           <td>{{obj.1}} </td> <!-- activity ID-->
+                           <td>{{obj.0}}</td>  <!--activity descr-->
+                           <td>{{obj.9}}</td>   <!--pn ref-->
+                           <td>{{obj.3}}</td>  <!--amt-->
+                           <td>{{obj.7}}</td>   <!--name-->
+                           <td>{{obj.4}}</td>  <!--Comment 1-->
+                           <td>{{obj.5}}</td>  <!--comment 2-->
+                           <td>{{obj.10}}</td>   <!--Webtrans code-->
+                           <td>{{obj.11}}</td>   <!--Data Source-->
+                           <!--<td>{{obj.8}}</td>   result-->
+                           <!--<td>{{obj.4}}</td>-->
+                           <!--<td>{{obj.9}}</td>-->
+                           <!--<td>{{obj.1}}</td>-->
+                           <!--<td>{{obj.7}}</td>-->
+                           <input name="record" value="{{obj.2}}" type="hidden">
+                           <input name="activity" value="{{obj.1}}" type="hidden">
+                           <input name="datasource" value="{{obj.11}}" type="hidden">
+                           <input name="method" value="view_details" type="hidden">
+                           <input name="selWTCode" value="{{obj.10}}" type="hidden">
+                           <td> <a href="{% url 'trustcommerce_download' obj.2 activity %}">Download</a> </td>
+                           </td>
+                  </tr>
+             {% endfor %}
+         </table>
+             CheckedValue = {{obj2}}
 
-<table cellpadding="1" cellspacing="0" border="1">
-         <tr class="zebra0">
+    </form>
 
-              <th>Accept</t>
-              <th>Record</t>
-              <th>Date</t>
-              <th>Activity ID</t>
-              <th>Activity</t>
-              <th>PNREF</t>
-              <th>Amt</t>
-              <th>Name</th>
-              <th>Comment1</th>
-              <th>StuID</th>
-         </tr>
-
-         {% for obj in objects %}
-              <tr class="{% cycle 'zebra1' 'zebra0' %}">
-                   <td><input id="checkBox" name=CheckedVal type="checkbox" value={{obj.0}} checked="checked"></td>
-                   <form name="get_activity_details" method="POST" action=".">
-                       <!--<td align="right">{{ forloop.counter }}</td>-->
-                       <td>{{obj.2}}</td>  <!--record ID-->
-                       <td>{{obj.6}}</td>  <!--date-->
-                       <td>{{obj.1}} </td> <!-- activity ID-->
-                       <td>{{obj.0}}</td>  <!--activity descr-->
-                       <td>{{obj.9}}</td>   <!--pn ref-->
-                       <td>{{obj.3}}</td>  <!--amt-->
-                       <td>{{obj.7}}</td>   <!--name-->
-                       <td>{{obj.4}}</td>  <!--Comment 1-->
-                       <td>{{obj.5}}</td>  <!--comment 2-->
-                       <td>{{obj.10}}</td>   <!--Webtrans code-->
-                       <td>{{obj.11}}</td>   <!--Data Source-->
-                       <!--<td>{{obj.8}}</td>   result-->
-                       <!--<td>{{obj.4}}</td>-->
-                       <!--<td>{{obj.9}}</td>-->
-                       <!--<td>{{obj.1}}</td>-->
-                       <!--<td>{{obj.7}}</td>-->
-
-                       <input name="activity" value="{{obj.1}}" type="hidden">
-                       <input name="datasource" value="{{obj.11}}" type="hidden">
-                       <input name="method" value="view_details" type="hidden">
-                       <input name="selWTCode" value="{{obj.10}}" type="hidden">
-                        </td>
-                   </form>
-              </tr>
-         {% endfor %}
-
-    </table>
     <br>
     <table style="width:100%" border=0 width 200>
-        <td>Activity = {{activity}}</td>
         <!--If enrichment -->
         {% if activity == '1' %}
         <tr><td>
@@ -107,7 +94,6 @@ How I pass a variable to it is another question....
         <tr><td><input name="submit" type="submit" value="Submit"></td></tr>
 
         <!--should be url +  name of url construct, parameter; display text-->
-        <a href="{% url 'trustcommerce_home' %}">download</a>
 
     </table>
 
